--- a/_config.yml
+++ b/_config.yml
@@ -1,14 +1,15 @@
 # Site settings
-title: Your awesome title
-email: your-email@domain.com
+title: Adrian Juarez
+email: aejuarez@outlook.com
 description: > # this means to ignore newlines until "baseurl:"
-  Write an awesome description for your new site here. You can edit this
-  line in _config.yml. It will appear in your document head meta (for
-  Google search results) and in your feed.xml site description.
+  This site will serve as a hub for various IT and Web projects 
+  that I have completed as an undergraduate at Central Washington 
+  University, and projects I am currently working on. 
+  I also plan to have a blog to coincide with this site.
+  Thanks for stopping by!
 baseurl: "" # the subpath of your site, e.g. /blog/
-url: "http://yourdomain.com" # the base hostname & protocol for your site
-twitter_username: jekyllrb
-github_username:  jekyll
+url: "http://aejuarez.com" # the base hostname & protocol for your site
+github_username: aejuarez
 
 # Build settings
 markdown: kramdown
