--- a/_config.yml
+++ b/_config.yml
@@ -7,7 +7,7 @@ baseurl:     ""
 url:         "http://www.aejuarez.com"
 
 # Google analytics
-google_analytics:
+google_analytics: UA-60996000-1
 
 # Optional features
 animated:           false
@@ -16,7 +16,7 @@ show_post_footers:  false
 
 # Disqus post comments
 # (leave blank to disable Disqus)
-disqus_shortname:
+disqus_shortname: aejuarez
 
 # Social icons
 show_social_icons: true
