add new blog post

--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@
 title:       Adrian Juarez
 email:       aejuarez@outlook.com
 author:      Adrian Juarez
-description: ""
+description: "Adrian Juarez's Website and Blog"
 baseurl:     ""
 url:         "http://www.aejuarez.com"
 
