--- a/_config.yml
+++ b/_config.yml
@@ -34,6 +34,8 @@ markdown:     redcarpet
 redcarpet:
   extensions: ['smart', 'tables', 'with_toc_data']
 permalink:    pretty
-paginate:     3
+gems: [jekyll-paginate]
+paginate:     5
+paginate_path: "page:num"
 sass:
   compressed: true
